// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en ProductImage debe mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Coffe mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`pruebas en ProductImage debe mostrarse correctamente el componente 1`] = `
<img
  alt="Coffe mug"
  className="productImg undefined"
  src="https://gatito.com/image.jpg"
/>
`;
